[1.9.0-SNAPSHOT]
- Update to LibGDX 1.9.8
- [BREAKING] UiContainer can now select a NavigationMode instead of only enabling/disabling keyboard
- Added GameDataSerializable interface for reading/writing binary data
- Added method to get file handles within the player data directory
- Added CustomCursor class for implementing custom cursors with up/down state
- Added Viewport implementations (Extend, Fill, Fit, Screen and Stretch)
- Tilesets can now be loaded from TextureAtlas instances
- UiContainer can now have multiple navigation action keys
- Mdx.playerData now uses temp files to write before moving files to target filename
- Fixed Graphics#tint not being reset each frame
- Fixed UI navigation cursor not updating when switching between controller and mouse
- Fixed DesktopPlayerData not ensuring data directory exists when writing JSON or binary files
- Fixed Sprite not carrying over flip status from TextureRegion

[1.8.2]
- Fixed UI hotkeys triggering actions while elements are disabled

[1.8.1]
- [BREAKING] TileMergeMode modes renamed to Y_THEN_X, X_THEN_X and SQUARE
- Added new TileMergeMode modes; Y_THEN_X_ALTERNATING and X_THEN_Y_ALTERNATING
- Added support for polyline per Tiled 1.2 specification

[1.8.0]
- Update to RoboVM 2.3.3
- [BREAKING] Replace usages of Java collections with GDX collections to improve performance
- [BREAKING] UI Modal and Containers are now unified into a single Container class
- [BREAKING] Deferred UI tasks can now be deferred until update() or layout()
- [BREAKING] UI elements now default to pixel coordinate UI layout
- [BREAKING] Rename PS4Button.X to PS4Button.CROSS per PS specification
- Added support for all GDX collection classes in XML/JSON serialization
- Added CustomUiElement class to simplify implementing custom UI elements
- Added support for both flex and pixel coordinate UI layouts
- Added support for static, ninepatch and tiling UI element backgrounds